--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         padding: 0;
         box-sizing: border-box;
       }
+      body {
+        overflow: hidden;
+      }
     </style>
   </head>
   <body>
